force-app/main/default/objects/Extended_Data__c.object
<CustomObject>
    <fields>
        <fullName>IN_Diploma_Track__c</fullName>
        <description>student&apos;s diploma pathway</description>
        <label>IN Diploma Track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certificate of Completion (IEP program)</fullName>
                </value>
                <value>
                    <fullName>Core 40</fullName>
                </value>
                <value>
                    <fullName>Core 40 w/ Waiver</fullName>
                </value>
                <value>
                    <fullName>Core 40 with Academic Honors</fullName>
                </value>
                <value>
                    <fullName>Core 40 with Technical Honors</fullName>
                </value>
                <value>
                    <fullName>General Diploma w/ Waiver</fullName>
                </value>
                <value>
                    <fullName>Opt out Core 40 (General Diploma)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Institutions_ZonedSchool__c</fullName>
        <description>Institutions-Zoned School</description>
        <label>Institutions ZonedSchool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Institutions-Academy Programs</fullName>
                </value>
                <value>
                    <fullName>Institutions-Adams County Ohio Valley</fullName>
                </value>
                <value>
                    <fullName>Institutions-Albertus Magnus High School</fullName>
                </value>
                <value>
                    <fullName>Institutions-Altoona School District</fullName>
                </value>
                <value>
                    <fullName>Institutions-American School of Bombay</fullName>
                </value>
                <value>
                    <fullName>Institutions-Anne Arundel Co SD</fullName>
                </value>
                <value>
                    <fullName>Institutions-Anthony Wayne HS</fullName>
                </value>
                <value>
                    <fullName>Institutions-Arcanum Virtual Academy</fullName>
                </value>
                <value>
                    <fullName>Institutions-Arch Bridge School Wellspring Foundation Inc</fullName>
                </value>
                <value>
                    <fullName>Institutions-Arlington Classics Academy-Middle School</fullName>
                </value>
                <value>
                    <fullName>Institutions-Baltimore County-Loch Raven High School</fullName>
                </value>
                <value>
                    <fullName>Institutions-Baltimore County-Patapsco High School</fullName>
                </value>
                <value>
                    <fullName>Institutions-Barberton Middle School</fullName>
                </value>
                <value>
                    <fullName>Institutions-Barron Area School District</fullName>
                </value>
                <value>
                    <fullName>Institutions-Belleville Mennonite School</fullName>
                </value>
                <value>
                    <fullName>Institutions-Berkeley MS</fullName>
                </value>
                <value>
                    <fullName>Institutions-Berkeley Springs HS</fullName>
                </value>
                <value>
                    <fullName>Institutions-Berrien Springs Virtual Academy</fullName>
                </value>
                <value>
                    <fullName>Institutions-Big Beaver Falls Digital</fullName>
                </value>
                <value>
                    <fullName>Institutions-Big Sur Charter School</fullName>
                </value>
                <value>
                    <fullName>Institutions-Bluefield High School</fullName>
                </value>
                <value>
                    <fullName>Institutions-Bohemia Manor Middle School</fullName>
                </value>
                <value>
                    <fullName>Institutions-Bridgeport High School</fullName>
                </value>
                <value>
                    <fullName>Institutions-Brookfield Academy</fullName>
                </value>
                <value>
                    <fullName>Institutions-Buckhannon Upshur High School</fullName>
                </value>
                <value>
                    <fullName>Institutions-Buffalo High School</fullName>
                </value>
                <value>
                    <fullName>Institutions-Burlington High School</fullName>
                </value>
                <value>
                    <fullName>Institutions-Cabell Alternative School</fullName>
                </value>
                <value>
                    <fullName>Institutions-Calhoun Middle/HS</fullName>
                </value>
                <value>
                    <fullName>Institutions-California Crosspoint High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KCA_HS_Diploma_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the student received a high school diploma</description>
        <label>KCA HS Diploma Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAVA_Is_District_Member_of_GCVS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The student resides within the Greenfield Public Schools District</description>
        <label>MAVA Is District Member of GCVS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAVA_Not_GCVS_District_Situation__c</fullName>
        <description>If indicated no, the student does not reside within the Greenfield Public Schools District, please review the following list of additional student situations that can result in enrollment preference. You may choose more than one selection or indicate that none of the situations apply. Please note that relevant documentation substantiating any claim for preference may be requested</description>
        <label>MAVA Not GCVS District Situation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None of these situations apply to my student</fullName>
                </value>
                <value>
                    <fullName>Students in training for competitive arts or sports</fullName>
                </value>
                <value>
                    <fullName>Students out of school due to pregnancy or parenting</fullName>
                </value>
                <value>
                    <fullName>Students who have been bullied or who are out of school due to other safety concerns</fullName>
                </value>
                <value>
                    <fullName>Students who must work during the day</fullName>
                </value>
                <value>
                    <fullName>Students who seek an advanced coursework not available in their current school</fullName>
                </value>
                <value>
                    <fullName>Students with disabilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MICA_Entrance_Age_Waiver__c</fullName>
        <description>MICA Entrance Age Waiver</description>
        <label>MICA Entrance Age Waiver</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MN_Open_Application_Status__c</fullName>
        <description>Open Application Status</description>
        <label>MN Open Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved - Achievement Integration</fullName>
                </value>
                <value>
                    <fullName>Approved - Moved After December 1</fullName>
                </value>
                <value>
                    <fullName>Approved - Nonresident Agreement Required</fullName>
                </value>
                <value>
                    <fullName>Approved - Wabasha-Kellogg Student</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Updated Form Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MVPS_DistrictSchool__c</fullName>
        <description>District and School</description>
        <label>MVPS DistrictSchool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABERDEEN SD~Aberdeen HS</fullName>
                </value>
                <value>
                    <fullName>ABERDEEN SD~Shivers Junior HS</fullName>
                </value>
                <value>
                    <fullName>ALCORN SD~Alcorn Central HS</fullName>
                </value>
                <value>
                    <fullName>ALCORN SD~Biggersville HS</fullName>
                </value>
                <value>
                    <fullName>ALCORN SD~Kossuth HS</fullName>
                </value>
                <value>
                    <fullName>AMITE CO SD~Amite County HS</fullName>
                </value>
                <value>
                    <fullName>AMORY SD~Amory HS</fullName>
                </value>
                <value>
                    <fullName>ATTALA CO SD~Ethel Attendance Center</fullName>
                </value>
                <value>
                    <fullName>ATTALA CO SD~McAdams Attendance Center</fullName>
                </value>
                <value>
                    <fullName>BALDWYN SD~Baldwyn HS</fullName>
                </value>
                <value>
                    <fullName>BAY ST LOUIS WAVELAND SD~Bay HS</fullName>
                </value>
                <value>
                    <fullName>BENOIT SD~Ray Brooks School</fullName>
                </value>
                <value>
                    <fullName>BENTON CO SD~Ashland HS</fullName>
                </value>
                <value>
                    <fullName>BENTON CO SD~Hickory Flat Attendance Center</fullName>
                </value>
                <value>
                    <fullName>BILOXI DIOCESES SD~RESURRECTION HS</fullName>
                </value>
                <value>
                    <fullName>BILOXI PUBLIC SD~Biloxi HS</fullName>
                </value>
                <value>
                    <fullName>BILOXI PUBLIC SD~Biloxi Junior High</fullName>
                </value>
                <value>
                    <fullName>BOONEVILLE SD~Booneville HS/MS</fullName>
                </value>
                <value>
                    <fullName>BROOKHAVEN SD~Brookhaven HS</fullName>
                </value>
                <value>
                    <fullName>CALHOUN CO SD~Bruce HS</fullName>
                </value>
                <value>
                    <fullName>CALHOUN CO SD~Calhoun City HS</fullName>
                </value>
                <value>
                    <fullName>CALHOUN CO SD~Vardaman HS</fullName>
                </value>
                <value>
                    <fullName>CANTON PUBLIC SD~Canton Public HS</fullName>
                </value>
                <value>
                    <fullName>CARROLL COUNTY SD~J Z George HS</fullName>
                </value>
                <value>
                    <fullName>CHICKASAW CO SD~Houlka Attendance Center</fullName>
                </value>
                <value>
                    <fullName>CHOCTAW CO SD~Ackerman High</fullName>
                </value>
                <value>
                    <fullName>CHOCTAW CO SD~Choctaw Central HS</fullName>
                </value>
                <value>
                    <fullName>CHOCTAW CO SD~Weir HS</fullName>
                </value>
                <value>
                    <fullName>CLAIBORNE CO SD~Port Gibson HS</fullName>
                </value>
                <value>
                    <fullName>CLARKSDALE MUNICIPAL SD~Clarksdale HS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Military_Temp_Out_of_State_Status__c</fullName>
        <label>Military Temp Out of State Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCAA_Sport__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NCAA Sport</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NCAA__c</fullName>
        <label>NCAA Course Approval Confirm</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCA_Kindergarten_Study__c</fullName>
        <description>What type of preschool did your child attend most often in the past 12 months? Please select the option that best applies</description>
        <label>NCA Kindergarten Study</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Friends/ family/ neighbor care</fullName>
                </value>
                <value>
                    <fullName>Head Start</fullName>
                </value>
                <value>
                    <fullName>None/ stayed home</fullName>
                </value>
                <value>
                    <fullName>Provided by a home-based/ family care center (child care provided in someone else&apos;s home)</fullName>
                </value>
                <value>
                    <fullName>Provided by a private child care facility or other daycare center</fullName>
                </value>
                <value>
                    <fullName>Provided by or at a university or college campus</fullName>
                </value>
                <value>
                    <fullName>Provided by the school district</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCA_No_Research_Required_Note__c</fullName>
        <description>Final Notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>NCA No Research Required Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCCA_HS_Calculator_Survey_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the student have a TI 84 calculator</description>
        <label>NCCA HS Calculator Survey Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCA_MS_Calc_Survey_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does your student have a TI 30 XS calculator</description>
        <label>NCCA MS Calc Survey Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCA_Military_Branch_Father__c</fullName>
        <description>Please indicate the branch of service the student’s Father is connected to</description>
        <label>NCCA Military Branch Father</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Coast Guard</fullName>
                </value>
                <value>
                    <fullName>Marine Corps</fullName>
                </value>
                <value>
                    <fullName>Navy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCA_Military_Branch_Guardian__c</fullName>
        <description>Please indicate the branch of service the student’s Guardian is connected to</description>
        <label>NCCA Military Branch Guardian</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Coast Guard</fullName>
                </value>
                <value>
                    <fullName>Marine Corps</fullName>
                </value>
                <value>
                    <fullName>Navy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCA_Military_Branch_Mother__c</fullName>
        <description>Please indicate the branch of service the student’s Mother is connected to</description>
        <label>NCCA Military Branch Mother</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Coast Guard</fullName>
                </value>
                <value>
                    <fullName>Marine Corps</fullName>
                </value>
                <value>
                    <fullName>Navy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCA_Military_Branch_Other__c</fullName>
        <description>Please indicate the branch of service the student’s &quot;Other&quot; entry is connected to</description>
        <label>NCCA Military Branch Other</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Coast Guard</fullName>
                </value>
                <value>
                    <fullName>Marine Corps</fullName>
                </value>
                <value>
                    <fullName>Navy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCA_Military_Branch_Sibling__c</fullName>
        <description>Please indicate the branch of service the student’s Sibling is connected to</description>
        <label>NCCA Military Branch Sibling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Coast Guard</fullName>
                </value>
                <value>
                    <fullName>Marine Corps</fullName>
                </value>
                <value>
                    <fullName>Navy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCA_Military_Branch_Stepfather__c</fullName>
        <description>Please indicate the branch of service the student’s Stepfather is connected to</description>
        <label>NCCA Military Branch Stepfather</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Coast Guard</fullName>
                </value>
                <value>
                    <fullName>Marine Corps</fullName>
                </value>
                <value>
                    <fullName>Navy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCA_Military_Branch_Stepmother__c</fullName>
        <description>Please indicate the branch of service the student’s Stepmother is connected to</description>
        <label>NCCA Military Branch Stepmother</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Coast Guard</fullName>
                </value>
                <value>
                    <fullName>Marine Corps</fullName>
                </value>
                <value>
                    <fullName>Navy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCA_Military_Connection_Who__c</fullName>
        <description>Please indicate which immediate family member is connected to the military</description>
        <label>NCCA Military Connection Who</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Sibling</fullName>
                </value>
                <value>
                    <fullName>Stepfather</fullName>
                </value>
                <value>
                    <fullName>Stepmother</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCA_Military_Connection__c</fullName>
        <description>Are any of this student&apos;s immediate family members part of the military</description>
        <label>NCCA Military Connection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decline to disclose</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCA_Military_Status_Father__c</fullName>
        <description>Please indicate the current military status of the student’s Father</description>
        <label>NCCA Military Status Father</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Duty</fullName>
                </value>
                <value>
                    <fullName>Active Reserve/Guard</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Deceased - Killed In Action</fullName>
                </value>
                <value>
                    <fullName>Disabled Veteran</fullName>
                </value>
                <value>
                    <fullName>Federal Civil Service Employee</fullName>
                </value>
                <value>
                    <fullName>Foreign Military</fullName>
                </value>
                <value>
                    <fullName>National Guard</fullName>
                </value>
                <value>
                    <fullName>Reserves</fullName>
                </value>
                <value>
                    <fullName>Retired Military</fullName>
                </value>
                <value>
                    <fullName>Veteran</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCA_Military_Status_Guardian__c</fullName>
        <description>Please indicate the current military status of the student’s Guardian</description>
        <label>NCCA Military Status Guardian</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Duty</fullName>
                </value>
                <value>
                    <fullName>Active Reserve/Guard</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Deceased - Killed In Action</fullName>
                </value>
                <value>
                    <fullName>Disabled Veteran</fullName>
                </value>
                <value>
                    <fullName>Federal Civil Service Employee</fullName>
                </value>
                <value>
                    <fullName>Foreign Military</fullName>
                </value>
                <value>
                    <fullName>National Guard</fullName>
                </value>
                <value>
                    <fullName>Reserves</fullName>
                </value>
                <value>
                    <fullName>Retired Military</fullName>
                </value>
                <value>
                    <fullName>Veteran</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCA_Military_Status_Mother__c</fullName>
        <description>Please indicate the current military status of the student’s Mother</description>
        <label>NCCA Military Status Mother</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Duty</fullName>
                </value>
                <value>
                    <fullName>Active Reserve/Guard</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Deceased - Killed In Action</fullName>
                </value>
                <value>
                    <fullName>Disabled Veteran</fullName>
                </value>
                <value>
                    <fullName>Federal Civil Service Employee</fullName>
                </value>
                <value>
                    <fullName>Foreign Military</fullName>
                </value>
                <value>
                    <fullName>National Guard</fullName>
                </value>
                <value>
                    <fullName>Reserves</fullName>
                </value>
                <value>
                    <fullName>Retired Military</fullName>
                </value>
                <value>
                    <fullName>Veteran</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCA_Military_Status_Other__c</fullName>
        <description>Please indicate the current military status of the student’s &quot;Other&quot; entry</description>
        <label>NCCA Military Status Other</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Duty</fullName>
                </value>
                <value>
                    <fullName>Active Reserve/Guard</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Deceased - Killed In Action</fullName>
                </value>
                <value>
                    <fullName>Disabled Veteran</fullName>
                </value>
                <value>
                    <fullName>Federal Civil Service Employee</fullName>
                </value>
                <value>
                    <fullName>Foreign Military</fullName>
                </value>
                <value>
                    <fullName>National Guard</fullName>
                </value>
                <value>
                    <fullName>Reserves</fullName>
                </value>
                <value>
                    <fullName>Retired Military</fullName>
                </value>
                <value>
                    <fullName>Veteran</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCA_Military_Status_Sibling__c</fullName>
        <description>Please indicate the current military status of the student’s Sibling</description>
        <label>NCCA Military Status Sibling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Duty</fullName>
                </value>
                <value>
                    <fullName>Active Reserve/Guard</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Deceased - Killed In Action</fullName>
                </value>
                <value>
                    <fullName>Disabled Veteran</fullName>
                </value>
                <value>
                    <fullName>Federal Civil Service Employee</fullName>
                </value>
                <value>
                    <fullName>Foreign Military</fullName>
                </value>
                <value>
                    <fullName>National Guard</fullName>
                </value>
                <value>
                    <fullName>Reserves</fullName>
                </value>
                <value>
                    <fullName>Retired Military</fullName>
                </value>
                <value>
                    <fullName>Veteran</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCA_Military_Status_Stepfather__c</fullName>
        <description>Please indicate the current military status of the student’s Stepfather</description>
        <label>NCCA Military Status Stepfather</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Duty</fullName>
                </value>
                <value>
                    <fullName>Active Reserve/Guard</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Deceased - Killed In Action</fullName>
                </value>
                <value>
                    <fullName>Disabled Veteran</fullName>
                </value>
                <value>
                    <fullName>Federal Civil Service Employee</fullName>
                </value>
                <value>
                    <fullName>Foreign Military</fullName>
                </value>
                <value>
                    <fullName>National Guard</fullName>
                </value>
                <value>
                    <fullName>Reserves</fullName>
                </value>
                <value>
                    <fullName>Retired Military</fullName>
                </value>
                <value>
                    <fullName>Veteran</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCA_Military_Status_Stepmother__c</fullName>
        <description>Please indicate the current military status of the student’s Stepmother</description>
        <label>NCCA Military Status Stepmother</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Duty</fullName>
                </value>
                <value>
                    <fullName>Active Reserve/Guard</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Deceased - Killed In Action</fullName>
                </value>
                <value>
                    <fullName>Disabled Veteran</fullName>
                </value>
                <value>
                    <fullName>Federal Civil Service Employee</fullName>
                </value>
                <value>
                    <fullName>Foreign Military</fullName>
                </value>
                <value>
                    <fullName>National Guard</fullName>
                </value>
                <value>
                    <fullName>Reserves</fullName>
                </value>
                <value>
                    <fullName>Retired Military</fullName>
                </value>
                <value>
                    <fullName>Veteran</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>